﻿drkns 27.03.2016 20:33:46 +0200 - build 4606

1. Рефакторинг.

drkns 26.03.2016 23:33:54 +0200 - build 4605

1. Уточнение 4603.

drkns 26.03.2016 21:56:52 +0200 - build 4604

1. Подавляем запросы прав при раскраске.

drkns 26.03.2016 21:16:07 +0200 - build 4603

1. Продолжим начатое в 4602. Запрашиваем дополнительную информацию о файлах тоже по мере необходимости. Это относится к:
   - количество жёстких ссылок
   - количество потоков
   - размер потоков
   - владелец
   - content data
   Это значит, что включение всего этого хозяйства не должно замедлять открытие папки, кроме случаев, когда оно является критерием сортировки.

drkns 26.03.2016 01:03:37 +0200 - build 4602

1. Раскрашиваем файлы в панели не все сразу, а по мере необходимости.
   Должно дать заметный эффект при большом количестве групп и/или файлов.

drkns 25.03.2016 10:08:48 +0200 - build 4601

1. Уточнение 4599.

drkns 25.03.2016 01:21:22 +0200 - build 4600

1. Уточнение 4574.

drkns 24.03.2016 23:40:39 +0200 - build 4599

1. 0003201: Message возвращает результат на 1 меньше ожидаемого

drkns 24.03.2016 23:04:54 +0200 - build 4598

1. Спрашиваем имя & пароль при cd \\server\share

w17 24.03.2016 20:32:59 +0300 - build 4597

1. Уточнение 4596. Вернём переключение когда Info панель неактивна.

w17 24.03.2016 17:14:32 +0300 - build 4596

1. Уточнение 4595. Переключение только при активной панели информации.

w17 24.03.2016 16:14:28 +0300 - build 4595

1. Продолжение 4590, 4594 переключение по Ctrl-Shift-S.

w17 24.03.2016 14:55:56 +0300 - build 4594

1. Продолжение 4590.
   Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S. 

drkns 24.03.2016 02:05:31 +0200 - build 4593

1. Падение при нажатии +/- в панели информации, если там присутствовал вьювер.

drkns 23.03.2016 20:31:08 +0200 - build 4592

1. С форума: Не логичное поведение при удалении сетевого диска

w17 23.03.2016 17:59:00 +0300 - build 4591

1. M#3089: Мелкая правка в панели информации (Ctrl+L)
