@@ -1,4 +1,8 @@
-﻿drkns 27.03.2016 20:33:46 +0200 - build 4606
+﻿drkns 29.03.2016 19:15:04 +0200 - build 4607
+
+1. Уточнение 4603. Возвращаем плагинам перечисленное только если оно уже считано.
+
+drkns 27.03.2016 20:33:46 +0200 - build 4606
 
 1. Рефакторинг.
 
